<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollableContents"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/linearMain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/myTextSecondaryColor"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="Address Information" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <EditText
                    android:id="@+id/editAddress"
                    style="@style/CustomEditTextStyle"
                    android:hint="@string/hint_address"
                    android:maxLines="1"
                    android:maxLength="40" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_locality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <EditText
                    android:id="@+id/editLocality"
                    style="@style/CustomEditTextStyle"
                    android:hint="@string/hint_locality"
                    android:maxLines="1"
                    android:maxLength="40" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <EditText
                    android:id="@+id/editCity"
                    style="@style/CustomEditTextStyle"
                    android:hint="@string/hint_city"
                    android:maxLines="1"
                    android:maxLength="40" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <EditText
                    android:id="@+id/editState"
                    style="@style/CustomEditTextStyle"
                    android:hint="@string/hint_state"
                    android:maxLines="1"
                    android:maxLength="40" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <EditText
                    android:id="@+id/editCountry"
                    style="@style/CustomEditTextStyle"
                    android:hint="@string/hint_country"
                    android:maxLines="1"
                    android:maxLength="40" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_pincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <EditText
                    android:id="@+id/editPincode"
                    style="@style/CustomEditTextStyle"
                    android:hint="@string/hint_pincode"
                    android:maxLines="1"
                    android:maxLength="6"
                    android:digits="1234567890"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>